objects/ChimpSync__campaign_history__c.object
<CustomObject>
    <fields>
        <fullName>ChimpSync__Active__c</fullName>
        <formula>IF(ChimpSync__Campaign__r.ChimpSync__mailchimp_campaign_id__c= ChimpSync__mailchimp_campaign_id__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Campaign__c</fullName>
        <label>Parent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign History</relationshipLabel>
        <relationshipName>Campaign_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Click_rate__c</fullName>
        <formula>IF(ChimpSync__Unique_clicks__c=0,0,ChimpSync__People_who_clicked__c/(ChimpSync__Emails_sent__c - (ChimpSync__Soft_bounces__c + ChimpSync__Hard_bounces__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Emails_sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Facebook_likes__c</fullName>
        <label>Facebook Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Forward_opens__c</fullName>
        <label>Forward Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Forwarded__c</fullName>
        <label>Forwarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Hard_bounces__c</fullName>
        <label>Hard Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Last_sync__c</fullName>
        <label>Last ChimpSync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MailChimp_Campaign_Email__c</fullName>
        <label>MailChimp Campaign E-mail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MailChimp_Campaign_URL__c</fullName>
        <label>MailChimp Campaign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MailChimp_List__c</fullName>
        <label>MailChimp List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Mailchimp_report__c</fullName>
        <label>MailChimp Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Open_rate__c</fullName>
        <formula>IF(ChimpSync__Unique_opens__c=0,0,ChimpSync__Unique_opens__c/(ChimpSync__Emails_sent__c  - (ChimpSync__Soft_bounces__c +  ChimpSync__Hard_bounces__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChimpSync__People_who_clicked__c</fullName>
        <label>People Who Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Segmentation__c</fullName>
        <label>Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Soft_bounces__c</fullName>
        <label>Soft Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Sync_Member_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Member Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Total_clicks__c</fullName>
        <label>Total Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Total_times_opened__c</fullName>
        <label>Total Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Unique_clicks__c</fullName>
        <label>Unique clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Unique_opens__c</fullName>
        <label>Unique opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChimpSync__mailchimp_campaign_id__c</fullName>
        <label>MailChimp Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Campaign History</label>
    <nameField>
        <label>Campaign History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>